testsuite/tests/safeHaskell/flags/SafeFlags18.stderr

SafeFlags18.hs:1:17: error: [-Werror]
    -fpackage-trust ignored; must be specified with a Safe Haskell flag
