testsuite/tests/safeHaskell/flags/SafeFlags18.hs
{-# OPTIONS_GHC -fpackage-trust #-}
-- | Basic test to see if Safe flags compiles
module SafeFlags18 where

f :: Int
f = 1

